@@ -37,7 +37,7 @@ If you have further demands, consider using an advanced solution, such as
 
 <div id="body">
 
-<p><strong>Please do read this documentation! Support might not be given otherwise.
+<p><strong>Please do read this documentation!
 It's generally a good idea to read the documentation,
 <em>before</em> you encounter any problems!</strong></p>
 
@@ -122,8 +122,9 @@ the RSS feed to be informed about possible problems.
 <p>Yanp_XH is licensed under
 <a href="http://www.gnu.org/licenses/gpl.html">GPLv3</a>.</p>
 <p>&copy; 2011-2012 Christoph M. Becker</p>
-<p>Danish translation &copy; 2011 Jens Maegard<br>
-Slovak translation &copy; 2011 Dr. Martin Sereday</p>
+<p>Danish translation &copy; 2011-2012 Jens Maegard<br>
+Slovak translation &copy; 2011-2012 Dr. Martin Sereday<br>
+Czech translation &copy; 2012 Josef Němec</p>
 <div class="toplink"><a href="#">back to top</a></div>
 
 <h2><a name="credits">Credits</a></h2>
@@ -134,7 +135,8 @@ and "free application icons" from <a href="http://www.aha-soft.com/">Aha-Soft</a
 Many thanks for publishing these icons as freeware.</p>
 <p>Many thanks to the community at the <a href="http://www.cmsimpleforum.com">CMSimple forum</a>
 for tips, suggestions and testing.</p>
-<p>And many thanks to all developers of <a href="http://www.cmsimple-xh.com">
+<p>Last but not least many thanks to <a href="http://www.harteg.dk">Peter Harteg</a>,
+the "father" of CMSimple, and all developers of <a href="http://www.cmsimple-xh.com">
 CMSimple_XH</a> without whom this amazing CMS wouldn't exist.</p>
 <div class="toplink"><a href="#">back to top</a></div>
 
