@@ -38,7 +38,6 @@ Wenn Sie weiter gehende Ansprüche haben, sollten sie die Verwendung einer fortg
 <div id="body">
 
 <p><strong>Bitte lesen Sie diese Dokumentation!
-Andernfalls wird möglicherweise kein Support gewährt.
 Es ist grundsätzlich eine gute Idee, die Dokumentation zu lesen,
 <em>bevor</em> Sie auf Probleme stoßen!</strong></p>
 
@@ -124,8 +123,9 @@ um mögliche Probleme zu erkennen.
 <p>Yanp_XH kann unter Einhaltung der
 <a href="http://www.gnu.org/licenses/gpl.html">GPLv3</a> verwendet werden.</p>
 <p>&copy; 2011-2012 Christoph M. Becker</p>
-<p>Dänische Übersetzung &copy; 2011 Jens Maegard<br>
-Slovakische Übersetzung &copy; 2011 Dr. Martin Sereday</p>
+<p>Dänische Übersetzung &copy; 2011-2012 Jens Maegard<br>
+Slovakische Übersetzung &copy; 2011-2012 Dr. Martin Sereday<br>
+Tschechische Übersetzung &copy; 2012 Josef Němec</p>
 <div class="toplink"><a href="#">back to top</a></div>
 
 <h2><a name="credits">Danksagung</a></h2>
@@ -136,7 +136,8 @@ und "free application icons" von <a href="http://www.aha-soft.com/">Aha-Soft</a>
 Vielen Dank für die Veröffentlichung als Freeware.</p>
 <p>Vielen Dank an die Community im <a href="http://www.cmsimpleforum.com">CMSimple-Forum</a>
 für Tipps, Vorschläge und das Testen.</p>
-<p>Und vielen Dank an alle Entwickler von <a href="http://www.cmsimple-xh.de">
+<p>Zu guter letzt vielen Dank an <a href="http://www.harteg.dk">Peter Harteg</a>,
+den "Vater" von CMSimple, und alle Entwickler von <a href="http://www.cmsimple-xh.de">
 CMSimple_XH</a>, ohne die dieses phantastische CMS nicht existieren würde.</p>
 <div class="toplink"><a href="#">back to top</a></div>
 
