@@ -1,0 +1,32 @@
+<?php
+
+$plugin_tx['yanp']['utf-8-marker']="äöüßě";
+$plugin_tx['yanp']['news_date_format']="d.m.Y";
+$plugin_tx['yanp']['news_read_more']="Číst&nbsp;více&nbsp;&raquo;";
+$plugin_tx['yanp']['feed_title']="";
+$plugin_tx['yanp']['feed_description']="";
+$plugin_tx['yanp']['feed_copyright']="";
+$plugin_tx['yanp']['feed_link_title']="RSS feed";
+$plugin_tx['yanp']['tab_label']="Novinky";
+$plugin_tx['yanp']['tab_form_label']="Novinky na stránce";
+$plugin_tx['yanp']['tab_description_label']="Popis";
+$plugin_tx['yanp']['tab_description_info']="Popis, který se zobrazí v newsboxu nebo RSS feedu. Pokud tento údaj zůstane prázdný, stránka nebude zařazena, resp bude odstráněna z novinek.";
+$plugin_tx['yanp']['syscheck_title']="Systémová kontrola";
+$plugin_tx['yanp']['syscheck_phpversion']="PHP verze ≥ %s";
+$plugin_tx['yanp']['syscheck_extension']="Nainstalované rozšíření '%s'";
+$plugin_tx['yanp']['syscheck_encoding']="Kódování 'UTF-8' konfigurováno";
+$plugin_tx['yanp']['syscheck_magic_quotes']="magic_quotes_runtime Off";
+$plugin_tx['yanp']['syscheck_writable']="Adresář '%s' povoluje zápis";
+$plugin_tx['yanp']['cf_utf-8-marker']="Interní použití. <strong>NEMĚNIT!</strong>";
+$plugin_tx['yanp']['cf_folder_data']="Cesta k adresáři relatívní ke kořenovému adresáři CMSimple, kam se  mají ukládat data pluginu, např.: \"userfiles/yanp/\". Pokud necháte prázdné, budou se data ukladat do adresáře pluginu data/ .";
+$plugin_tx['yanp']['cf_feed_enabled']="Má se vytvořit RSS feed: \"1\" (ano) nebo \"0\" (ne)";
+$plugin_tx['yanp']['cf_feed_image']="Název JPEG, PNG nebo GIF souboru v adresáři /images, který se integruje do RSS feedu jako logo (nesmí byť větší než 144x400 px)";
+$plugin_tx['yanp']['cf_feed_extension']="Přípona souborů RSS feedu. Obvykle \"xml\" nebo \"rss\"";
+$plugin_tx['yanp']['cf_feed_copyright']="&lt;copyright&gt; pro RSS feed.";
+$plugin_tx['yanp']['cf_feed_title']="&lt;Název&gt; RSS feedu. Pokud necháte prázdný, použije se site_title";
+$plugin_tx['yanp']['cf_feed_description']="&lt;Popis&gt; RSS feedu. Pokud necháte prázdný, použije se meta_description";
+$plugin_tx['yanp']['cf_feed_link_title']="Název viditelného odkazu na RSS a odkaz v &lt;hlavičce&gt; stránky";
+$plugin_tx['yanp']['cf_news_date_format']="Vícec podrobností na http://de.php.net/manual/en/function.date.php";
+$plugin_tx['yanp']['cf_news_read_more']="Text pro odkaz 'Více...'. Možno použít jakýkoli (X)HTML inline element, např. i obrázek.";
+
+?>
