@@ -1,30 +1,39 @@
 <?php
 
-$plugin_tx['yanp']['utf-8-marker']="äöüß";
+/*
+ * Copyright (c) 2012 Jens Maegaard - JmNet.dk - CMSimple-xh.dk
+ *
+ * This work is licensed under a Creative Commons Attribution 3.0 Unported
+ * License.
+ */
 
+$plugin_tx['yanp']['utf-8-marker']="äöüß";
 $plugin_tx['yanp']['news_date_format']="d.m.Y";
 $plugin_tx['yanp']['news_read_more']="Læs&nbsp;mere&nbsp;&raquo;";
-
 $plugin_tx['yanp']['feed_title']="";
 $plugin_tx['yanp']['feed_description']="";
 $plugin_tx['yanp']['feed_copyright']="";
 $plugin_tx['yanp']['feed_link_title']="RSS feed";
-
 $plugin_tx['yanp']['tab_label']="Nyheder";
 $plugin_tx['yanp']['tab_form_label']="Nyhedsside";
 $plugin_tx['yanp']['tab_description_label']="Beskrivelse";
 $plugin_tx['yanp']['tab_description_info']="Beskrivelsen, der vises i Nyhedsboks og RSS-feed. Hvis feltet er tomt, er den side ikke er føjet til hhv. fjernet fra nyhederne.";
-
+$plugin_tx['yanp']['syscheck_title']="System check";
+$plugin_tx['yanp']['syscheck_phpversion']="PHP version ≥ %s";
+$plugin_tx['yanp']['syscheck_extension']="Extension '%s' loaded";
+$plugin_tx['yanp']['syscheck_encoding']="Tegnkoding'UTF-8' Konfigureret";
+$plugin_tx['yanp']['syscheck_magic_quotes']="magic_quotes_runtime Off";
+$plugin_tx['yanp']['syscheck_writable']="Mappen '%s' skrivebar";
 $plugin_tx['yanp']['cf_utf-8-marker']="Internt brug. <strong>Ændre ikke noget!</strong>";
 $plugin_tx['yanp']['cf_folder_data']="Sti til en mappe i forhold til CMSimple rodmappen, hvor du vil gemme plugin data. Fx. \"userfiles/yanp/\". Blank felt og den vil gemme i plugin's data/ folder.";
 $plugin_tx['yanp']['cf_feed_enabled']="Vejret RSS-feed vil blive oprettet: \"1\" (ja) eller \"0\" (nej)";
 $plugin_tx['yanp']['cf_feed_image']="Navnet på en JPEG, PNG eller GIF billede i din billedmappe, som er integreret på RSS-feed, da det logo (må ikk overstige 144x400 pixels)";
 $plugin_tx['yanp']['cf_feed_extension']="Udvidelsen af RSS Feed-filer. Typisk \"xml\" or \"rss\"";
-
+$plugin_tx['yanp']['cf_feed_copyright']="&lt;copyright&gt; af RSS feed";
 $plugin_tx['yanp']['cf_feed_title']="&lt;Titlen&gt; på RSS feed. Hvis blank, side_title vil blive anvendt";
 $plugin_tx['yanp']['cf_feed_description']="&lt;Beskrivelse&gt; af RSS feed. Hvis blank, vil meta_beskrivelsen blive anvendt";
 $plugin_tx['yanp']['cf_feed_link_title']="Titlen på den synlige feed-linket og linket i webstedets &lt;head&gt;";
-
 $plugin_tx['yanp']['cf_news_date_format']="For flere details se http://de.php.net/manual/en/function.date.php";
+$plugin_tx['yanp']['cf_news_read_more']="Teksten til 'læs mere' linket. Kan være nogen (X) HTML inline element, så du kan indsætte et billede f.eks.";
 
 ?>
