@@ -1,38 +1,38 @@
 <?php
 
-$plugin_tx['yanp']['utf-8-marker']="äöüßľščťžýáíéňô";
+/*
+ * Copyright (c) 2012 Dr. Martin Sereday - www.cmsimple.sk - info(at)cmsimple.sk
+ *
+ * This work is licensed under a Creative Commons Attribution 3.0 Unported
+ * License.
+ */
 
+$plugin_tx['yanp']['utf-8-marker']="äöüßľščťžýáíéňô";
 $plugin_tx['yanp']['news_date_format']="d.m.Y";
 $plugin_tx['yanp']['news_read_more']="Viac...";
-
 $plugin_tx['yanp']['feed_title']="";
 $plugin_tx['yanp']['feed_description']="";
 $plugin_tx['yanp']['feed_copyright']="";
 $plugin_tx['yanp']['feed_link_title']="RSS feed";
-
 $plugin_tx['yanp']['tab_label']="Oznamy";
 $plugin_tx['yanp']['tab_form_label']="Oznamy na stránke";
 $plugin_tx['yanp']['tab_description_label']="Popis";
 $plugin_tx['yanp']['tab_description_info']="Popis, ktorý sa zobrazí v newsboxe alebo RSS feede. Ak tento údaj ostane prázdny, stránka nebude zaradená, resp bude odstránená z oznamov.";
-
 $plugin_tx['yanp']['syscheck_title']="Systéová kontrola";
 $plugin_tx['yanp']['syscheck_phpversion']="PHP verzia ≥ %s";
 $plugin_tx['yanp']['syscheck_extension']="Nainštalované rozšírenia '%s'";
 $plugin_tx['yanp']['syscheck_encoding']="Kódovanie 'UTF-8' konfigurované";
 $plugin_tx['yanp']['syscheck_magic_quotes']="magic_quotes_runtime Off";
 $plugin_tx['yanp']['syscheck_writable']="Adresár '%s' povolený pre zápis";
-
 $plugin_tx['yanp']['cf_utf-8-marker']="Vnútorné použitie. <strong>NEMENIŤ!</strong>";
 $plugin_tx['yanp']['cf_folder_data']="Cesta k adresáru relatívna ku koreňovému adresáru CMSimple, kam s amajú ukladať dáta pluginov, napr.: \"userfiles/yanp/\". Ak necháte prázdne, budú sa dáta ukladať do adresára pluginu data/ .";
 $plugin_tx['yanp']['cf_feed_enabled']="Má sa vytvoriť RSS feed: \"1\" (áno) or \"0\" (nie)";
 $plugin_tx['yanp']['cf_feed_image']="Názov JPEG, PNG alebo GIF súboru v adresári /images, ktorý sa integruje do RSS feedu ako logo (nesmie byť väčší ako 144x400 px)";
 $plugin_tx['yanp']['cf_feed_extension']="Prípona spbrov RSS feedu. Obyčajne \"xml\" alebo \"rss\"";
-
 $plugin_tx['yanp']['cf_feed_copyright']="&lt;copyright&gt; pre RSS feed.";
 $plugin_tx['yanp']['cf_feed_title']="&lt;Názov&gt; RSS feedu. Ak necháte prázdne, použije sa site_title";
-$plugin_tx['yanp']['cf_feed_description']="&lt;Popis&gt; RSS feedu. Ak necháte prázdne, pou6ije sa meta_description";
+$plugin_tx['yanp']['cf_feed_description']="&lt;Popis&gt; RSS feedu. Ak necháte prázdne, použije sa meta_description";
 $plugin_tx['yanp']['cf_feed_link_title']="Názov viditeľného odkazu na RSS a odkaz v &lt;hlavičke&gt; stránky";
-
 $plugin_tx['yanp']['cf_news_date_format']="Viac podrobností na http://de.php.net/manual/en/function.date.php";
 $plugin_tx['yanp']['cf_news_read_more']="Text pre odkaz 'Viac...'. Možno použiť akýkoľvek (X)HTML inline element, napr. aj obrázok.";
 
