@@ -4,7 +4,7 @@
  * Pagedata view of Yanp_XH.
  * Copyright (c) 2011-2012 Christoph M. Becker (see license.txt)
  */
- 
+
 
 // utf-8-marker: äöüß
 
@@ -23,8 +23,8 @@ if (!defined('CMSIMPLE_XH_VERSION')) {
  */
 function yanp_view($page) {
     global $tx, $sn, $su, $pth, $plugin_tx;
-    
-    $ptx =& $plugin_tx['yanp'];
+
+    $ptx = $plugin_tx['yanp'];
     $help_icon = tag('image src="'.$pth['folder']['plugins'].'yanp/images/help.png" alt="help"');
     $htm = '<form id="yanp" action="'.$sn.'?'.$su.'" method="post">'."\n"
 	    .'<p><strong>'.$ptx['tab_form_label'].'</strong></p>'."\n";
@@ -33,7 +33,7 @@ function yanp_view($page) {
 	.'<label for="yanp_description"><span>'.$ptx['tab_description_label'].'</span></label>'.tag('br')."\n";
     $htm .= '<textarea id="yanp_description" name="yanp_description" cols="40" row="10">'
 	    .$page['yanp_description'].'</textarea>'."\n";
-    
+
     $htm .= tag('input type="hidden" name="save_page_data"')."\n"
 	    .'<div style="text-align: right">'."\n"
 	    .tag('input type="submit" value="'.ucfirst($tx['action']['save']).'"')."\n"
